--- a/classes/_state_state_.state.html
+++ b/classes/_state_state_.state.html
@@ -82,7 +82,13 @@
 								<a href="_state_booleanstate_.booleanstate.html" class="tsd-signature-type">BooleanState</a>
 							</li>
 							<li>
+								<a href="_state_numberstate_.numberstate.html" class="tsd-signature-type">NumberState</a>
+							</li>
+							<li>
 								<a href="_state_stringstate_.stringstate.html" class="tsd-signature-type">StringState</a>
+							</li>
+							<li>
+								<a href="_state_valuestate_.valuestate.html" class="tsd-signature-type">ValueState</a>
 							</li>
 						</ul>
 					</li>
@@ -130,7 +136,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/State.ts#L3">state/State.ts:3</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/State.ts#L3">state/State.ts:3</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -152,7 +158,7 @@
 					<div class="tsd-signature tsd-kind-icon">state<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/State.ts#L2">state/State.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/State.ts#L2">state/State.ts:2</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -162,7 +168,7 @@
 					<div class="tsd-signature tsd-kind-icon">subscriptions<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">function</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> =&nbsp;[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/State.ts#L3">state/State.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/State.ts#L3">state/State.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -179,7 +185,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/State.ts#L34">state/State.ts:34</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/State.ts#L34">state/State.ts:34</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -196,7 +202,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/State.ts#L18">state/State.ts:18</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/State.ts#L18">state/State.ts:18</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">any</span></h4>
@@ -213,7 +219,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/State.ts#L14">state/State.ts:14</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/State.ts#L14">state/State.ts:14</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -230,7 +236,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/State.ts#L9">state/State.ts:9</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/State.ts#L9">state/State.ts:9</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -253,7 +259,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/State.ts#L23">state/State.ts:23</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/State.ts#L23">state/State.ts:23</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -299,16 +305,25 @@
 						<a href="../modules/_state_react_injectarray_.html">"state-<wbr>react/<wbr>Inject<wbr>Array"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectboolean_.html">"state-<wbr>react/<wbr>Inject<wbr>Boolean"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injectfocus_.html">"state-<wbr>react/<wbr>Inject<wbr>Focus"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injecthover_.html">"state-<wbr>react/<wbr>Inject<wbr>Hover"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectnumber_.html">"state-<wbr>react/<wbr>Inject<wbr>Number"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injectstring_.html">"state-<wbr>react/<wbr>Inject<wbr>String"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injecttoggle_.html">"state-<wbr>react/<wbr>Inject<wbr>Toggle"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectvalue_.html">"state-<wbr>react/<wbr>Inject<wbr>Value"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_subscribe_.html">"state-<wbr>react/<wbr>Subscribe"</a>
@@ -319,11 +334,17 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_booleanstate_.html">"state/<wbr>Boolean<wbr>State"</a>
 					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_numberstate_.html">"state/<wbr>Number<wbr>State"</a>
+					</li>
 					<li class="current tsd-kind-external-module">
 						<a href="../modules/_state_state_.html">"state/<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_stringstate_.html">"state/<wbr>String<wbr>State"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_valuestate_.html">"state/<wbr>Value<wbr>State"</a>
 					</li>
 				</ul>
 			</nav>
