--- a/globals.html
+++ b/globals.html
@@ -78,15 +78,20 @@
 								<li class="tsd-kind-external-module"><a href="modules/_ioc_container_.html" class="tsd-kind-icon">"ioc/<wbr>Container"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_react_compose_.html" class="tsd-kind-icon">"state-<wbr>react/<wbr>Compose"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_react_injectarray_.html" class="tsd-kind-icon">"state-<wbr>react/<wbr>Inject<wbr>Array"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_state_react_injectboolean_.html" class="tsd-kind-icon">"state-<wbr>react/<wbr>Inject<wbr>Boolean"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_react_injectfocus_.html" class="tsd-kind-icon">"state-<wbr>react/<wbr>Inject<wbr>Focus"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_react_injecthover_.html" class="tsd-kind-icon">"state-<wbr>react/<wbr>Inject<wbr>Hover"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_state_react_injectnumber_.html" class="tsd-kind-icon">"state-<wbr>react/<wbr>Inject<wbr>Number"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_react_injectstring_.html" class="tsd-kind-icon">"state-<wbr>react/<wbr>Inject<wbr>String"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_react_injecttoggle_.html" class="tsd-kind-icon">"state-<wbr>react/<wbr>Inject<wbr>Toggle"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_state_react_injectvalue_.html" class="tsd-kind-icon">"state-<wbr>react/<wbr>Inject<wbr>Value"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_react_subscribe_.html" class="tsd-kind-icon">"state-<wbr>react/<wbr>Subscribe"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_arraystate_.html" class="tsd-kind-icon">"state/<wbr>Array<wbr>State"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_booleanstate_.html" class="tsd-kind-icon">"state/<wbr>Boolean<wbr>State"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_state_numberstate_.html" class="tsd-kind-icon">"state/<wbr>Number<wbr>State"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_state_.html" class="tsd-kind-icon">"state/<wbr>State"</a></li>
 								<li class="tsd-kind-external-module"><a href="modules/_state_stringstate_.html" class="tsd-kind-icon">"state/<wbr>String<wbr>State"</a></li>
+								<li class="tsd-kind-external-module"><a href="modules/_state_valuestate_.html" class="tsd-kind-icon">"state/<wbr>Value<wbr>State"</a></li>
 							</ul>
 						</section>
 					</div>
@@ -124,16 +129,25 @@
 						<a href="modules/_state_react_injectarray_.html">"state-<wbr>react/<wbr>Inject<wbr>Array"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="modules/_state_react_injectboolean_.html">"state-<wbr>react/<wbr>Inject<wbr>Boolean"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="modules/_state_react_injectfocus_.html">"state-<wbr>react/<wbr>Inject<wbr>Focus"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="modules/_state_react_injecthover_.html">"state-<wbr>react/<wbr>Inject<wbr>Hover"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="modules/_state_react_injectnumber_.html">"state-<wbr>react/<wbr>Inject<wbr>Number"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="modules/_state_react_injectstring_.html">"state-<wbr>react/<wbr>Inject<wbr>String"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="modules/_state_react_injecttoggle_.html">"state-<wbr>react/<wbr>Inject<wbr>Toggle"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="modules/_state_react_injectvalue_.html">"state-<wbr>react/<wbr>Inject<wbr>Value"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="modules/_state_react_subscribe_.html">"state-<wbr>react/<wbr>Subscribe"</a>
@@ -145,10 +159,16 @@
 						<a href="modules/_state_booleanstate_.html">"state/<wbr>Boolean<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="modules/_state_numberstate_.html">"state/<wbr>Number<wbr>State"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="modules/_state_state_.html">"state/<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="modules/_state_stringstate_.html">"state/<wbr>String<wbr>State"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="modules/_state_valuestate_.html">"state/<wbr>Value<wbr>State"</a>
 					</li>
 				</ul>
 			</nav>
