--- a/interfaces/_state_react_subscribe_.iprops.html
+++ b/interfaces/_state_react_subscribe_.iprops.html
@@ -100,7 +100,7 @@
 					<div class="tsd-signature tsd-kind-icon">children<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state-react/Subscribe.ts#L5">state-react/Subscribe.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state-react/Subscribe.ts#L5">state-react/Subscribe.ts:5</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -131,7 +131,7 @@
 					<div class="tsd-signature tsd-kind-icon">dispose<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state-react/Subscribe.ts#L6">state-react/Subscribe.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state-react/Subscribe.ts#L6">state-react/Subscribe.ts:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -141,7 +141,7 @@
 					<div class="tsd-signature tsd-kind-icon">to<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state-react/Subscribe.ts#L4">state-react/Subscribe.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state-react/Subscribe.ts#L4">state-react/Subscribe.ts:4</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -243,16 +243,25 @@
 						<a href="../modules/_state_react_injectarray_.html">"state-<wbr>react/<wbr>Inject<wbr>Array"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectboolean_.html">"state-<wbr>react/<wbr>Inject<wbr>Boolean"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injectfocus_.html">"state-<wbr>react/<wbr>Inject<wbr>Focus"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injecthover_.html">"state-<wbr>react/<wbr>Inject<wbr>Hover"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectnumber_.html">"state-<wbr>react/<wbr>Inject<wbr>Number"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injectstring_.html">"state-<wbr>react/<wbr>Inject<wbr>String"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injecttoggle_.html">"state-<wbr>react/<wbr>Inject<wbr>Toggle"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectvalue_.html">"state-<wbr>react/<wbr>Inject<wbr>Value"</a>
 					</li>
 					<li class="current tsd-kind-external-module">
 						<a href="../modules/_state_react_subscribe_.html">"state-<wbr>react/<wbr>Subscribe"</a>
@@ -264,10 +273,16 @@
 						<a href="../modules/_state_booleanstate_.html">"state/<wbr>Boolean<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_numberstate_.html">"state/<wbr>Number<wbr>State"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_state_.html">"state/<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_stringstate_.html">"state/<wbr>String<wbr>State"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_valuestate_.html">"state/<wbr>Value<wbr>State"</a>
 					</li>
 				</ul>
 			</nav>
