--- a/classes/_state_arraystate_.arraystate.html
+++ b/classes/_state_arraystate_.arraystate.html
@@ -129,7 +129,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#constructor">constructor</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/ArrayState.ts#L4">state/ArrayState.ts:4</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/ArrayState.ts#L4">state/ArrayState.ts:4</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -151,7 +151,7 @@
 					<div class="tsd-signature tsd-kind-icon">initial<wbr>Values<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/ArrayState.ts#L4">state/ArrayState.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/ArrayState.ts#L4">state/ArrayState.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -162,7 +162,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#state">state</a></p>
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/State.ts#L2">state/State.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/State.ts#L2">state/State.ts:2</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -179,7 +179,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/ArrayState.ts#L12">state/ArrayState.ts:12</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/ArrayState.ts#L12">state/ArrayState.ts:12</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -197,7 +197,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#dispose">dispose</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/State.ts#L34">state/State.ts:34</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/State.ts#L34">state/State.ts:34</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -215,7 +215,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#get">get</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/State.ts#L18">state/State.ts:18</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/State.ts#L18">state/State.ts:18</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">any</span></h4>
@@ -232,7 +232,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/ArrayState.ts#L15">state/ArrayState.ts:15</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/ArrayState.ts#L15">state/ArrayState.ts:15</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -255,7 +255,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/ArrayState.ts#L16">state/ArrayState.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/ArrayState.ts#L16">state/ArrayState.ts:16</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -278,7 +278,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/ArrayState.ts#L13">state/ArrayState.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/ArrayState.ts#L13">state/ArrayState.ts:13</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -289,19 +289,19 @@
 					<a name="set" class="tsd-anchor"></a>
 					<h3>set</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">set<span class="tsd-signature-symbol">(</span>values<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">set<span class="tsd-signature-symbol">(</span>values<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/ArrayState.ts#L11">state/ArrayState.ts:11</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/ArrayState.ts#L11">state/ArrayState.ts:11</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>values: <span class="tsd-signature-type">any</span></h5>
+									<h5>values: <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">[]</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -319,7 +319,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#setstate">setState</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/State.ts#L9">state/State.ts:9</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/State.ts#L9">state/State.ts:9</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -343,7 +343,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_state_state_.state.html">State</a>.<a href="_state_state_.state.html#subscribe">subscribe</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state/State.ts#L23">state/State.ts:23</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state/State.ts#L23">state/State.ts:23</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -389,16 +389,25 @@
 						<a href="../modules/_state_react_injectarray_.html">"state-<wbr>react/<wbr>Inject<wbr>Array"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectboolean_.html">"state-<wbr>react/<wbr>Inject<wbr>Boolean"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injectfocus_.html">"state-<wbr>react/<wbr>Inject<wbr>Focus"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injecthover_.html">"state-<wbr>react/<wbr>Inject<wbr>Hover"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectnumber_.html">"state-<wbr>react/<wbr>Inject<wbr>Number"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injectstring_.html">"state-<wbr>react/<wbr>Inject<wbr>String"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injecttoggle_.html">"state-<wbr>react/<wbr>Inject<wbr>Toggle"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectvalue_.html">"state-<wbr>react/<wbr>Inject<wbr>Value"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_subscribe_.html">"state-<wbr>react/<wbr>Subscribe"</a>
@@ -410,10 +419,16 @@
 						<a href="../modules/_state_booleanstate_.html">"state/<wbr>Boolean<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_numberstate_.html">"state/<wbr>Number<wbr>State"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_state_.html">"state/<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_stringstate_.html">"state/<wbr>String<wbr>State"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_valuestate_.html">"state/<wbr>Value<wbr>State"</a>
 					</li>
 				</ul>
 			</nav>
