--- a/interfaces/_state_react_injectfocus_.iprops.html
+++ b/interfaces/_state_react_injectfocus_.iprops.html
@@ -99,7 +99,7 @@
 					<div class="tsd-signature tsd-kind-icon">children<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state-react/InjectFocus.tsx#L5">state-react/InjectFocus.tsx:5</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state-react/InjectFocus.tsx#L5">state-react/InjectFocus.tsx:5</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -165,7 +165,7 @@
 					<div class="tsd-signature tsd-kind-icon">initial<wbr>Value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/3262848/src/state-react/InjectFocus.tsx#L6">state-react/InjectFocus.tsx:6</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state-react/InjectFocus.tsx#L6">state-react/InjectFocus.tsx:6</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -201,6 +201,9 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injectarray_.html">"state-<wbr>react/<wbr>Inject<wbr>Array"</a>
 					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectboolean_.html">"state-<wbr>react/<wbr>Inject<wbr>Boolean"</a>
+					</li>
 					<li class="current tsd-kind-external-module">
 						<a href="../modules/_state_react_injectfocus_.html">"state-<wbr>react/<wbr>Inject<wbr>Focus"</a>
 					</li>
@@ -208,10 +211,16 @@
 						<a href="../modules/_state_react_injecthover_.html">"state-<wbr>react/<wbr>Inject<wbr>Hover"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectnumber_.html">"state-<wbr>react/<wbr>Inject<wbr>Number"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injectstring_.html">"state-<wbr>react/<wbr>Inject<wbr>String"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_injecttoggle_.html">"state-<wbr>react/<wbr>Inject<wbr>Toggle"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectvalue_.html">"state-<wbr>react/<wbr>Inject<wbr>Value"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_react_subscribe_.html">"state-<wbr>react/<wbr>Subscribe"</a>
@@ -223,10 +232,16 @@
 						<a href="../modules/_state_booleanstate_.html">"state/<wbr>Boolean<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_numberstate_.html">"state/<wbr>Number<wbr>State"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_state_.html">"state/<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/_state_stringstate_.html">"state/<wbr>String<wbr>State"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_valuestate_.html">"state/<wbr>Value<wbr>State"</a>
 					</li>
 				</ul>
 			</nav>
