--- a/interfaces/_state_react_injectnumber_.iprops.html
+++ b/interfaces/_state_react_injectnumber_.iprops.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;ioc-react/InjectAndSubscribe&quot; | @symbiotic/green-state</title>
+	<title>IProps | @symbiotic/green-state</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -56,85 +56,109 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="_ioc_react_injectandsubscribe_.html">&quot;ioc-react/InjectAndSubscribe&quot;</a>
+					<a href="../modules/_state_react_injectnumber_.html">&quot;state-react/InjectNumber&quot;</a>
+				</li>
+				<li>
+					<a href="_state_react_injectnumber_.iprops.html">IProps</a>
 				</li>
 			</ul>
-			<h1>External module &quot;ioc-react/InjectAndSubscribe&quot;</h1>
+			<h1>Interface IProps</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel tsd-hierarchy">
+				<h3>Hierarchy</h3>
+				<ul class="tsd-hierarchy">
+					<li>
+						<span class="target">IProps</span>
+					</li>
+				</ul>
+			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section tsd-is-not-exported">
-							<h3>Interfaces</h3>
+							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported"><a href="../interfaces/_ioc_react_injectandsubscribe_.iprops.html" class="tsd-kind-icon">IProps</a></li>
-							</ul>
-						</section>
-						<section class="tsd-index-section ">
-							<h3>Functions</h3>
-							<ul class="tsd-index-list">
-								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_ioc_react_injectandsubscribe_.html#injectandsubscribe" class="tsd-kind-icon">Inject<wbr>And<wbr>Subscribe</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="_state_react_injectnumber_.iprops.html#children" class="tsd-kind-icon">children</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported"><a href="_state_react_injectnumber_.iprops.html#initialvalue" class="tsd-kind-icon">initial<wbr>Value</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Functions</h2>
-				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
-					<a name="injectandsubscribe" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagConst">Const</span> Inject<wbr>And<wbr>Subscribe</h3>
-					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">Inject<wbr>And<wbr>Subscribe<span class="tsd-signature-symbol">(</span>__namedParameters<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Element</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc-react/InjectAndSubscribe.tsx#L10">ioc-react/InjectAndSubscribe.tsx:10</a></li>
+			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
+				<h2>Properties</h2>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+					<a name="children" class="tsd-anchor"></a>
+					<h3>children</h3>
+					<div class="tsd-signature tsd-kind-icon">children<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state-react/InjectNumber.tsx#L6">state-react/InjectNumber.tsx:6</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-type-declaration">
+						<h4>Type declaration</h4>
+						<ul class="tsd-parameters">
+							<li class="tsd-parameter-siganture">
+								<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-property tsd-is-not-exported">
+									<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>state<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">React.ReactNode</span></li>
 								</ul>
-							</aside>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>__namedParameters: <span class="tsd-signature-type">object</span></h5>
-									<ul class="tsd-parameters">
-										<li class="tsd-parameter">
-											<h5>children<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">function</span></h5>
-											<ul class="tsd-parameters">
-												<li class="tsd-parameter-siganture">
-													<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-variable tsd-is-not-exported">
-														<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">React.ReactNode</span></li>
-													</ul>
-													<ul class="tsd-descriptions">
-														<li class="tsd-description">
-															<h4 class="tsd-parameters-title">Parameters</h4>
-															<ul class="tsd-parameters">
-																<li>
-																	<h5>value: <span class="tsd-signature-type">any</span></h5>
-																</li>
-															</ul>
-															<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">React.ReactNode</span></h4>
-														</li>
-													</ul>
-												</li>
-											</ul>
-										</li>
-										<li class="tsd-parameter">
-											<h5>di<wbr>Key<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></h5>
-										</li>
-									</ul>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Element</span></h4>
-						</li>
-					</ul>
+								<ul class="tsd-descriptions">
+									<li class="tsd-description">
+										<h4 class="tsd-parameters-title">Parameters</h4>
+										<ul class="tsd-parameters">
+											<li>
+												<h5>state: <span class="tsd-signature-type">object</span></h5>
+												<ul class="tsd-parameters">
+													<li class="tsd-parameter">
+														<h5>set<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">function</span></h5>
+														<ul class="tsd-parameters">
+															<li class="tsd-parameter-siganture">
+																<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-variable tsd-is-not-exported">
+																	<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+																</ul>
+																<ul class="tsd-descriptions">
+																	<li class="tsd-description">
+																		<h4 class="tsd-parameters-title">Parameters</h4>
+																		<ul class="tsd-parameters">
+																			<li>
+																				<h5>value: <span class="tsd-signature-type">number</span></h5>
+																			</li>
+																		</ul>
+																		<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+																	</li>
+																</ul>
+															</li>
+														</ul>
+													</li>
+													<li class="tsd-parameter">
+														<h5>value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
+													</li>
+												</ul>
+											</li>
+										</ul>
+										<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">React.ReactNode</span></h4>
+									</li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+					<a name="initialvalue" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> initial<wbr>Value</h3>
+					<div class="tsd-signature tsd-kind-icon">initial<wbr>Value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state-react/InjectNumber.tsx#L7">state-react/InjectNumber.tsx:7</a></li>
+						</ul>
+					</aside>
 				</section>
 			</section>
 		</div>
@@ -145,80 +169,92 @@
 						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_ioc_react_dependencycontainercontext_.html">"ioc-<wbr>react/<wbr>Dependency<wbr>Container<wbr>Context"</a>
+						<a href="../modules/_ioc_react_dependencycontainercontext_.html">"ioc-<wbr>react/<wbr>Dependency<wbr>Container<wbr>Context"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_ioc_react_dependencycontainerreactcontext_.html">"ioc-<wbr>react/<wbr>Dependency<wbr>Container<wbr>React<wbr>Context"</a>
+						<a href="../modules/_ioc_react_dependencycontainerreactcontext_.html">"ioc-<wbr>react/<wbr>Dependency<wbr>Container<wbr>React<wbr>Context"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_ioc_react_inject_.html">"ioc-<wbr>react/<wbr>Inject"</a>
+						<a href="../modules/_ioc_react_inject_.html">"ioc-<wbr>react/<wbr>Inject"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_ioc_react_injectandsubscribe_.html">"ioc-<wbr>react/<wbr>Inject<wbr>And<wbr>Subscribe"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_ioc_react_withdependencies_.html">"ioc-<wbr>react/with<wbr>Dependencies"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_ioc_container_.html">"ioc/<wbr>Container"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_compose_.html">"state-<wbr>react/<wbr>Compose"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectarray_.html">"state-<wbr>react/<wbr>Inject<wbr>Array"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectboolean_.html">"state-<wbr>react/<wbr>Inject<wbr>Boolean"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injectfocus_.html">"state-<wbr>react/<wbr>Inject<wbr>Focus"</a>
+					</li>
+					<li class=" tsd-kind-external-module">
+						<a href="../modules/_state_react_injecthover_.html">"state-<wbr>react/<wbr>Inject<wbr>Hover"</a>
 					</li>
 					<li class="current tsd-kind-external-module">
-						<a href="_ioc_react_injectandsubscribe_.html">"ioc-<wbr>react/<wbr>Inject<wbr>And<wbr>Subscribe"</a>
+						<a href="../modules/_state_react_injectnumber_.html">"state-<wbr>react/<wbr>Inject<wbr>Number"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_ioc_react_withdependencies_.html">"ioc-<wbr>react/with<wbr>Dependencies"</a>
+						<a href="../modules/_state_react_injectstring_.html">"state-<wbr>react/<wbr>Inject<wbr>String"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_ioc_container_.html">"ioc/<wbr>Container"</a>
+						<a href="../modules/_state_react_injecttoggle_.html">"state-<wbr>react/<wbr>Inject<wbr>Toggle"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_state_react_compose_.html">"state-<wbr>react/<wbr>Compose"</a>
+						<a href="../modules/_state_react_injectvalue_.html">"state-<wbr>react/<wbr>Inject<wbr>Value"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_state_react_injectarray_.html">"state-<wbr>react/<wbr>Inject<wbr>Array"</a>
+						<a href="../modules/_state_react_subscribe_.html">"state-<wbr>react/<wbr>Subscribe"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_state_react_injectboolean_.html">"state-<wbr>react/<wbr>Inject<wbr>Boolean"</a>
+						<a href="../modules/_state_arraystate_.html">"state/<wbr>Array<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_state_react_injectfocus_.html">"state-<wbr>react/<wbr>Inject<wbr>Focus"</a>
+						<a href="../modules/_state_booleanstate_.html">"state/<wbr>Boolean<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_state_react_injecthover_.html">"state-<wbr>react/<wbr>Inject<wbr>Hover"</a>
+						<a href="../modules/_state_numberstate_.html">"state/<wbr>Number<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_state_react_injectnumber_.html">"state-<wbr>react/<wbr>Inject<wbr>Number"</a>
+						<a href="../modules/_state_state_.html">"state/<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_state_react_injectstring_.html">"state-<wbr>react/<wbr>Inject<wbr>String"</a>
+						<a href="../modules/_state_stringstate_.html">"state/<wbr>String<wbr>State"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
-						<a href="_state_react_injecttoggle_.html">"state-<wbr>react/<wbr>Inject<wbr>Toggle"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="_state_react_injectvalue_.html">"state-<wbr>react/<wbr>Inject<wbr>Value"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="_state_react_subscribe_.html">"state-<wbr>react/<wbr>Subscribe"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="_state_arraystate_.html">"state/<wbr>Array<wbr>State"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="_state_booleanstate_.html">"state/<wbr>Boolean<wbr>State"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="_state_numberstate_.html">"state/<wbr>Number<wbr>State"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="_state_state_.html">"state/<wbr>State"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="_state_stringstate_.html">"state/<wbr>String<wbr>State"</a>
-					</li>
-					<li class=" tsd-kind-external-module">
-						<a href="_state_valuestate_.html">"state/<wbr>Value<wbr>State"</a>
+						<a href="../modules/_state_valuestate_.html">"state/<wbr>Value<wbr>State"</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
-						<a href="../interfaces/_ioc_react_injectandsubscribe_.iprops.html" class="tsd-kind-icon">IProps</a>
+				</ul>
+				<ul class="current">
+					<li class="current tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_state_react_injectnumber_.iprops.html" class="tsd-kind-icon">IProps</a>
+						<ul>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+								<a href="_state_react_injectnumber_.iprops.html#children" class="tsd-kind-icon">children</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-not-exported">
+								<a href="_state_react_injectnumber_.iprops.html#initialvalue" class="tsd-kind-icon">initial<wbr>Value</a>
+							</li>
+						</ul>
 					</li>
+				</ul>
+				<ul class="after-current">
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
-						<a href="_ioc_react_injectandsubscribe_.html#injectandsubscribe" class="tsd-kind-icon">Inject<wbr>And<wbr>Subscribe</a>
+						<a href="../modules/_state_react_injectnumber_.html#injectnumber" class="tsd-kind-icon">Inject<wbr>Number</a>
 					</li>
 				</ul>
 			</nav>
