--- a/modules/_state_react_injectnumber_.html
+++ b/modules/_state_react_injectnumber_.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;ioc-react/InjectAndSubscribe&quot; | @symbiotic/green-state</title>
+	<title>&quot;state-react/InjectNumber&quot; | @symbiotic/green-state</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -56,10 +56,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="_ioc_react_injectandsubscribe_.html">&quot;ioc-react/InjectAndSubscribe&quot;</a>
+					<a href="_state_react_injectnumber_.html">&quot;state-react/InjectNumber&quot;</a>
 				</li>
 			</ul>
-			<h1>External module &quot;ioc-react/InjectAndSubscribe&quot;</h1>
+			<h1>External module &quot;state-react/InjectNumber&quot;</h1>
 		</div>
 	</div>
 </header>
@@ -73,13 +73,13 @@
 						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Interfaces</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported"><a href="../interfaces/_ioc_react_injectandsubscribe_.iprops.html" class="tsd-kind-icon">IProps</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported"><a href="../interfaces/_state_react_injectnumber_.iprops.html" class="tsd-kind-icon">IProps</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_ioc_react_injectandsubscribe_.html#injectandsubscribe" class="tsd-kind-icon">Inject<wbr>And<wbr>Subscribe</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_state_react_injectnumber_.html#injectnumber" class="tsd-kind-icon">Inject<wbr>Number</a></li>
 							</ul>
 						</section>
 					</div>
@@ -88,16 +88,16 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Functions</h2>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
-					<a name="injectandsubscribe" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagConst">Const</span> Inject<wbr>And<wbr>Subscribe</h3>
+					<a name="injectnumber" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> Inject<wbr>Number</h3>
 					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">Inject<wbr>And<wbr>Subscribe<span class="tsd-signature-symbol">(</span>__namedParameters<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Element</span></li>
+						<li class="tsd-signature tsd-kind-icon">Inject<wbr>Number<span class="tsd-signature-symbol">(</span>__namedParameters<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Element</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc-react/InjectAndSubscribe.tsx#L10">ioc-react/InjectAndSubscribe.tsx:10</a></li>
+									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/state-react/InjectNumber.tsx#L10">state-react/InjectNumber.tsx:10</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -110,14 +110,40 @@
 											<ul class="tsd-parameters">
 												<li class="tsd-parameter-siganture">
 													<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-variable tsd-is-not-exported">
-														<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">React.ReactNode</span></li>
+														<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>state<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">React.ReactNode</span></li>
 													</ul>
 													<ul class="tsd-descriptions">
 														<li class="tsd-description">
 															<h4 class="tsd-parameters-title">Parameters</h4>
 															<ul class="tsd-parameters">
 																<li>
-																	<h5>value: <span class="tsd-signature-type">any</span></h5>
+																	<h5>state: <span class="tsd-signature-type">object</span></h5>
+																	<ul class="tsd-parameters">
+																		<li class="tsd-parameter">
+																			<h5>set<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">function</span></h5>
+																			<ul class="tsd-parameters">
+																				<li class="tsd-parameter-siganture">
+																					<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-variable tsd-is-not-exported">
+																						<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+																					</ul>
+																					<ul class="tsd-descriptions">
+																						<li class="tsd-description">
+																							<h4 class="tsd-parameters-title">Parameters</h4>
+																							<ul class="tsd-parameters">
+																								<li>
+																									<h5>value: <span class="tsd-signature-type">number</span></h5>
+																								</li>
+																							</ul>
+																							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+																						</li>
+																					</ul>
+																				</li>
+																			</ul>
+																		</li>
+																		<li class="tsd-parameter">
+																			<h5>value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
+																		</li>
+																	</ul>
 																</li>
 															</ul>
 															<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">React.ReactNode</span></h4>
@@ -127,7 +153,7 @@
 											</ul>
 										</li>
 										<li class="tsd-parameter">
-											<h5>di<wbr>Key<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></h5>
+											<h5>initial<wbr>Value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
 										</li>
 									</ul>
 								</li>
@@ -153,7 +179,7 @@
 					<li class=" tsd-kind-external-module">
 						<a href="_ioc_react_inject_.html">"ioc-<wbr>react/<wbr>Inject"</a>
 					</li>
-					<li class="current tsd-kind-external-module">
+					<li class=" tsd-kind-external-module">
 						<a href="_ioc_react_injectandsubscribe_.html">"ioc-<wbr>react/<wbr>Inject<wbr>And<wbr>Subscribe"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -177,7 +203,7 @@
 					<li class=" tsd-kind-external-module">
 						<a href="_state_react_injecthover_.html">"state-<wbr>react/<wbr>Inject<wbr>Hover"</a>
 					</li>
-					<li class=" tsd-kind-external-module">
+					<li class="current tsd-kind-external-module">
 						<a href="_state_react_injectnumber_.html">"state-<wbr>react/<wbr>Inject<wbr>Number"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -215,10 +241,10 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
-						<a href="../interfaces/_ioc_react_injectandsubscribe_.iprops.html" class="tsd-kind-icon">IProps</a>
+						<a href="../interfaces/_state_react_injectnumber_.iprops.html" class="tsd-kind-icon">IProps</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
-						<a href="_ioc_react_injectandsubscribe_.html#injectandsubscribe" class="tsd-kind-icon">Inject<wbr>And<wbr>Subscribe</a>
+						<a href="_state_react_injectnumber_.html#injectnumber" class="tsd-kind-icon">Inject<wbr>Number</a>
 					</li>
 				</ul>
 			</nav>
