--- a/modules/_state_valuestate_.html
+++ b/modules/_state_valuestate_.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;ioc-react/InjectAndSubscribe&quot; | @symbiotic/green-state</title>
+	<title>&quot;state/ValueState&quot; | @symbiotic/green-state</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -56,10 +56,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="_ioc_react_injectandsubscribe_.html">&quot;ioc-react/InjectAndSubscribe&quot;</a>
+					<a href="_state_valuestate_.html">&quot;state/ValueState&quot;</a>
 				</li>
 			</ul>
-			<h1>External module &quot;ioc-react/InjectAndSubscribe&quot;</h1>
+			<h1>External module &quot;state/ValueState&quot;</h1>
 		</div>
 	</div>
 </header>
@@ -70,71 +70,13 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section tsd-is-not-exported">
-							<h3>Interfaces</h3>
-							<ul class="tsd-index-list">
-								<li class="tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported"><a href="../interfaces/_ioc_react_injectandsubscribe_.iprops.html" class="tsd-kind-icon">IProps</a></li>
-							</ul>
-						</section>
 						<section class="tsd-index-section ">
-							<h3>Functions</h3>
+							<h3>Classes</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_ioc_react_injectandsubscribe_.html#injectandsubscribe" class="tsd-kind-icon">Inject<wbr>And<wbr>Subscribe</a></li>
+								<li class="tsd-kind-class tsd-parent-kind-external-module"><a href="../classes/_state_valuestate_.valuestate.html" class="tsd-kind-icon">Value<wbr>State</a></li>
 							</ul>
 						</section>
 					</div>
-				</section>
-			</section>
-			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Functions</h2>
-				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module">
-					<a name="injectandsubscribe" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagConst">Const</span> Inject<wbr>And<wbr>Subscribe</h3>
-					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module">
-						<li class="tsd-signature tsd-kind-icon">Inject<wbr>And<wbr>Subscribe<span class="tsd-signature-symbol">(</span>__namedParameters<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Element</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/65afaea/src/ioc-react/InjectAndSubscribe.tsx#L10">ioc-react/InjectAndSubscribe.tsx:10</a></li>
-								</ul>
-							</aside>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>__namedParameters: <span class="tsd-signature-type">object</span></h5>
-									<ul class="tsd-parameters">
-										<li class="tsd-parameter">
-											<h5>children<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">function</span></h5>
-											<ul class="tsd-parameters">
-												<li class="tsd-parameter-siganture">
-													<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-variable tsd-is-not-exported">
-														<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>value<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">React.ReactNode</span></li>
-													</ul>
-													<ul class="tsd-descriptions">
-														<li class="tsd-description">
-															<h4 class="tsd-parameters-title">Parameters</h4>
-															<ul class="tsd-parameters">
-																<li>
-																	<h5>value: <span class="tsd-signature-type">any</span></h5>
-																</li>
-															</ul>
-															<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">React.ReactNode</span></h4>
-														</li>
-													</ul>
-												</li>
-											</ul>
-										</li>
-										<li class="tsd-parameter">
-											<h5>di<wbr>Key<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></h5>
-										</li>
-									</ul>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Element</span></h4>
-						</li>
-					</ul>
 				</section>
 			</section>
 		</div>
@@ -153,7 +95,7 @@
 					<li class=" tsd-kind-external-module">
 						<a href="_ioc_react_inject_.html">"ioc-<wbr>react/<wbr>Inject"</a>
 					</li>
-					<li class="current tsd-kind-external-module">
+					<li class=" tsd-kind-external-module">
 						<a href="_ioc_react_injectandsubscribe_.html">"ioc-<wbr>react/<wbr>Inject<wbr>And<wbr>Subscribe"</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -207,18 +149,15 @@
 					<li class=" tsd-kind-external-module">
 						<a href="_state_stringstate_.html">"state/<wbr>String<wbr>State"</a>
 					</li>
-					<li class=" tsd-kind-external-module">
+					<li class="current tsd-kind-external-module">
 						<a href="_state_valuestate_.html">"state/<wbr>Value<wbr>State"</a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
-						<a href="../interfaces/_ioc_react_injectandsubscribe_.iprops.html" class="tsd-kind-icon">IProps</a>
-					</li>
-					<li class=" tsd-kind-function tsd-parent-kind-external-module">
-						<a href="_ioc_react_injectandsubscribe_.html#injectandsubscribe" class="tsd-kind-icon">Inject<wbr>And<wbr>Subscribe</a>
+					<li class=" tsd-kind-class tsd-parent-kind-external-module">
+						<a href="../classes/_state_valuestate_.valuestate.html" class="tsd-kind-icon">Value<wbr>State</a>
 					</li>
 				</ul>
 			</nav>
