--- a/index.html
+++ b/index.html
@@ -72,14 +72,15 @@
 				<ul>
 					<li><a href="#installation">Installation</a></li>
 					<li><a href="#api-reference">API Reference</a></li>
+					<li><a href="#state-objects">State Objects</a></li>
 					<li><a href="#basic-example">Basic Example</a></li>
 					<li><a href="#react-example">React Example</a></li>
 					<li><a href="#loading-state-asynchronously">Loading State Asynchronously</a></li>
 					<li><a href="#state-classes-and-components">State Classes and Components</a><ul>
-							<li><a href="#booleanstate">BooleanState</a></li>
-							<li><a href="#injecttoggle-react-helper">InjectToggle React Helper</a></li>
-							<li><a href="#injecthover-and-injectfocus">InjectHover and InjectFocus</a></li>
 							<li><a href="#stringstate-and-injectstring">StringState and InjectString</a></li>
+							<li><a href="#numberstate-and-injectnumber">NumberState and InjectNumber</a></li>
+							<li><a href="#booleanstate-and-injectboolean">BooleanState and InjectBoolean</a></li>
+							<li><a href="#injecttoggle-injecthover-and-injectfocus-react-components">InjectToggle, InjectHover and InjectFocus React components</a></li>
 							<li><a href="#arraystate-and-injectarray">ArrayState and InjectArray</a></li>
 							<li><a href="#composite-state">Composite State</a></li>
 						</ul>
