--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 							<li><a href="#numberstate-and-injectnumber">NumberState and InjectNumber</a></li>
 							<li><a href="#booleanstate-and-injectboolean">BooleanState and InjectBoolean</a></li>
 							<li><a href="#injecttoggle-injecthover-and-injectfocus-react-components">InjectToggle, InjectHover and InjectFocus React components</a></li>
+							<li><a href="#valuestate-and-injectvalue">ValueState and InjectValue</a></li>
 							<li><a href="#arraystate-and-injectarray">ArrayState and InjectArray</a></li>
 							<li><a href="#composite-state">Composite State</a></li>
 						</ul>
