--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ const MySlider = () =&gt; (
         &lt;/form&gt;
         &lt;ul&gt;
           {groceryList.values.map((value, index) =&gt; (
-            &lt;li key={index}&gt;'
+            &lt;li key={index}&gt;
               {value}
               &lt;button onClick={() =&gt; groceryList.removeElement(value)}&gt;X&lt;/button&gt;
             &lt;/li&gt;
