--- a/interfaces/_state_react_subscribe_.istate.html
+++ b/interfaces/_state_react_subscribe_.istate.html
@@ -98,7 +98,7 @@
 					<div class="tsd-signature tsd-kind-icon">value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/50fc9fc/src/state-react/Subscribe.ts#L10">state-react/Subscribe.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/9206a6f/src/state-react/Subscribe.ts#L15">state-react/Subscribe.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -198,6 +198,9 @@
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_state_react_subscribe_.isubscribable.html" class="tsd-kind-icon">ISubscribable</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
