--- a/interfaces/_state_react_subscribe_.iprops.html
+++ b/interfaces/_state_react_subscribe_.iprops.html
@@ -100,7 +100,7 @@
 					<div class="tsd-signature tsd-kind-icon">children<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/50fc9fc/src/state-react/Subscribe.ts#L5">state-react/Subscribe.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/9206a6f/src/state-react/Subscribe.ts#L10">state-react/Subscribe.ts:10</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -131,7 +131,7 @@
 					<div class="tsd-signature tsd-kind-icon">dispose<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/50fc9fc/src/state-react/Subscribe.ts#L6">state-react/Subscribe.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/9206a6f/src/state-react/Subscribe.ts#L11">state-react/Subscribe.ts:11</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -141,7 +141,7 @@
 					<div class="tsd-signature tsd-kind-icon">to<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">function</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/50fc9fc/src/state-react/Subscribe.ts#L4">state-react/Subscribe.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/symbioticlabs/green-state/blob/9206a6f/src/state-react/Subscribe.ts#L9">state-react/Subscribe.ts:9</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -149,61 +149,14 @@
 						<ul class="tsd-parameters">
 							<li class="tsd-parameter-siganture">
 								<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-property tsd-is-not-exported">
-									<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span></li>
+									<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_state_react_subscribe_.isubscribable.html" class="tsd-signature-type">ISubscribable</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_state_react_subscribe_.isubscribable.html" class="tsd-signature-type">ISubscribable</a><span class="tsd-signature-symbol">&gt;</span></li>
 								</ul>
 								<ul class="tsd-descriptions">
 									<li class="tsd-description">
-										<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">object</span></h4>
-										<ul class="tsd-parameters">
-											<li class="tsd-parameter">
-												<h5><span class="tsd-flag ts-flagOptional">Optional</span> dispose<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">function</span></h5>
-												<ul class="tsd-parameters">
-													<li class="tsd-parameter-siganture">
-														<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-variable tsd-is-not-exported">
-															<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
-														</ul>
-														<ul class="tsd-descriptions">
-															<li class="tsd-description">
-																<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
-															</li>
-														</ul>
-													</li>
-												</ul>
-											</li>
-											<li class="tsd-parameter">
-												<h5>subscribe<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">function</span></h5>
-												<ul class="tsd-parameters">
-													<li class="tsd-parameter-siganture">
-														<ul class="tsd-signatures tsd-kind-type-literal tsd-parent-kind-variable tsd-is-not-exported">
-															<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span>callback<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">function</span></li>
-														</ul>
-														<ul class="tsd-descriptions">
-															<li class="tsd-description">
-																<h4 class="tsd-parameters-title">Parameters</h4>
-																<ul class="tsd-parameters">
-																	<li>
-																		<h5>callback: <span class="tsd-signature-type">any</span></h5>
-																	</li>
-																</ul>
-																<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">function</span></h4>
-																<ul class="tsd-parameters">
-																	<li class="tsd-parameter-siganture">
-																		<ul class="tsd-signatures tsd-kind-type-literal tsd-is-not-exported">
-																			<li class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
-																		</ul>
-																		<ul class="tsd-descriptions">
-																			<li class="tsd-description">
-																				<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
-																			</li>
-																		</ul>
-																	</li>
-																</ul>
-															</li>
-														</ul>
-													</li>
-												</ul>
-											</li>
-										</ul>
+										<h4 class="tsd-returns-title">Returns <a href="_state_react_subscribe_.isubscribable.html" class="tsd-signature-type">ISubscribable</a>
+											<span class="tsd-signature-symbol"> | </span>
+											<span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_state_react_subscribe_.isubscribable.html" class="tsd-signature-type">ISubscribable</a><span class="tsd-signature-symbol">&gt;</span>
+										</h4>
 									</li>
 								</ul>
 							</li>
@@ -311,6 +264,9 @@
 				<ul class="after-current">
 					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="_state_react_subscribe_.istate.html" class="tsd-kind-icon">IState</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_state_react_subscribe_.isubscribable.html" class="tsd-kind-icon">ISubscribable</a>
 					</li>
 				</ul>
 			</nav>
