--- a/modules/_state_react_subscribe_.html
+++ b/modules/_state_react_subscribe_.html
@@ -81,6 +81,7 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported"><a href="../interfaces/_state_react_subscribe_.iprops.html" class="tsd-kind-icon">IProps</a></li>
 								<li class="tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported"><a href="../interfaces/_state_react_subscribe_.istate.html" class="tsd-kind-icon">IState</a></li>
+								<li class="tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported"><a href="../interfaces/_state_react_subscribe_.isubscribable.html" class="tsd-kind-icon">ISubscribable</a></li>
 							</ul>
 						</section>
 					</div>
@@ -171,6 +172,9 @@
 					</li>
 					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
 						<a href="../interfaces/_state_react_subscribe_.istate.html" class="tsd-kind-icon">IState</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../interfaces/_state_react_subscribe_.isubscribable.html" class="tsd-kind-icon">ISubscribable</a>
 					</li>
 				</ul>
 			</nav>
